syntax = "proto3";

package com.smartagri.sensor;

option java_multiple_files = true;
option java_package = "grpc.SensorService";
option java_outer_classname = "SensorProto";

import "google/protobuf/timestamp.proto";

service SensorService {
  rpc StreamSensorData(SensorRequest) returns (stream SensorResponse);
  rpc getSensorData(SensorRequest) returns ( SensorResponse);

}

message SensorRequest {
  string farmid = 1;
  string sensorid = 2;
}

message SensorResponse {
  double tempreture = 1;
  double humidity = 2;
  string district = 3;
  double illumination = 4;
}


